--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   flutter_local_notifications: 13.0.0
   photo_view: 0.14.0
   provider: ^6.0.1
+  top_snackbar_flutter: ^3.0.0+1
 
 dev_dependencies:
   flutter_test:
