--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   photo_view: 0.14.0
   provider: ^6.0.1
   top_snackbar_flutter: ^3.0.0+1
+  dio: ^5.1.1
+  pin_code_fields: ^7.4.0
 
 dev_dependencies:
   flutter_test:
